--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/TakahashiHiroto/tetris-swap/issues"
   },
-  "homepage": "https://github.com/TakahashiHiroto/tetris-swap#readme"
+  "homepage": "https://github.com/TakahashiHiroto/tetris-swap#readme",
+
+  "engines": {
+    "node": "v4.1.X",
+    "npm": "2.14.X"
+  }
 }
