--- a/launch.json
+++ b/launch.json
@@ -6,7 +6,7 @@
         // デバッグ設定の名称
         "name": "Launch local file",
         // デバッグ種別を指定（chrome/node/monoなど）
-        "type": "chrome",
+        "type": "node",
         // lanunchまたはattachを指定
         "request": "launch",
         // 読み込むHTMLファイルを指定（プロジェクトからのパスを指定）
